<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <!-- Imagem do Tempo - Margem reduzida para 20dp -->
        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clear_day" />

        <!-- Campos de Entrada (Latitude e Longitude) -->
        <TextView
            android:id="@+id/Latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/lat_label"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editLat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editLat" />

        <EditText
            android:id="@+id/editLat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Latitude"
            app:layout_constraintTop_toBottomOf="@+id/imgWeather" />

        <TextView
            android:id="@+id/Longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_label"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editLong"
            app:layout_constraintStart_toStartOf="@+id/Latitude"
            app:layout_constraintTop_toTopOf="@+id/editLong" />

        <EditText
            android:id="@+id/editLong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            app:layout_constraintEnd_toEndOf="@+id/editLat"
            app:layout_constraintStart_toStartOf="@+id/editLat"
            app:layout_constraintTop_toBottomOf="@+id/editLat" />
        <TextView
            android:id="@+id/SeaLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/pressure_label"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/Longitude"
            app:layout_constraintTop_toBottomOf="@+id/editLong" />

        <TextView
            android:id="@+id/PressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/SeaLevel"
            app:layout_constraintEnd_toEndOf="@+id/editLong" />

        <TextView
            android:id="@+id/WindDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/wind_dir_label"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/SeaLevel"
            app:layout_constraintTop_toBottomOf="@+id/SeaLevel" />

        <TextView
            android:id="@+id/WindDirections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/WindDirection"
            app:layout_constraintEnd_toEndOf="@+id/PressureValue" />

        <TextView
            android:id="@+id/WindSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/wind_speed"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/WindDirection"
            app:layout_constraintTop_toBottomOf="@+id/WindDirection" />

        <TextView
            android:id="@+id/WindSpeeds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/WindSpeed"
            app:layout_constraintEnd_toEndOf="@+id/WindDirections" />

        <TextView
            android:id="@+id/Temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/temp_label"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/WindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/WindSpeed" />

        <TextView
            android:id="@+id/txtTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/Temperature"
            app:layout_constraintEnd_toEndOf="@+id/WindSpeeds" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/time_label"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/Temperature"
            app:layout_constraintTop_toBottomOf="@+id/Temperature" />

        <TextView
            android:id="@+id/TimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/Time"
            app:layout_constraintEnd_toEndOf="@+id/txtTemperature" />

        <!-- Botão Atualizar - Margem de 40dp no fundo -->
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#9C27B0"
            android:text="@string/btn_update"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>